Fix build when ENABLE_RESOURCE_LOAD_STATISTICS is disabled https://bugs.webkit.org/show_bug.cgi?id=219316

Unreviewed build fix.

Add ENABLE(RESOURCE_LOAD_STATISTICS) guards around NetworkSession requests for
resource load statistics. Move firePrivateClickMeasurementTimerImmediately out of
a ENABLE(RESOURCE_LOAD_STATISTICS) guard and place it where its ordered in the header.

This originally broke the PlayStation build before ENABLE_RESOURCE_LOAD_STATISTICS
was turned on.

No new tests. No change in behavior.


* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::simulateResourceLoadStatisticsSessionRestart):
* NetworkProcess/NetworkSession.cpp:
(WebKit::NetworkSession::firePrivateClickMeasurementTimerImmediately):
* NetworkProcess/PrivateClickMeasurementManager.cpp:
(WebKit::PrivateClickMeasurementManager::storeUnattributed):
(WebKit::PrivateClickMeasurementManager::attribute):
(WebKit::PrivateClickMeasurementManager::clearSentAttributions):
(WebKit::PrivateClickMeasurementManager::updateTimerLastFired):
(WebKit::PrivateClickMeasurementManager::firePendingAttributionRequests):
(WebKit::PrivateClickMeasurementManager::clear):
(WebKit::PrivateClickMeasurementManager::clearForRegistrableDomain):
(WebKit::PrivateClickMeasurementManager::clearExpired):
(WebKit::PrivateClickMeasurementManager::toString const):
(WebKit::PrivateClickMeasurementManager::markAllUnattributedAsExpiredForTesting):
(WebKit::PrivateClickMeasurementManager::markAttributedPrivateClickMeasurementsAsExpiredForTesting):


Canonical link: https://commits.webkit.org/231914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270205 268f45cc-cd09-0410-ab3c-d52691b4dbfc