Source/WebKit/NetworkProcess/PrivateClickMeasurementManager.cpp
@@ -74,8 +74,10 @@ void PrivateClickMeasurementManager::storeUnattributed(PrivateClickMeasurement&&
         m_networkProcess->broadcastConsoleMessage(m_sessionID, MessageSource::PrivateClickMeasurement, MessageLevel::Error, "[Private Click Measurement] Storing an ad click."_s);
     }
 
+#if ENABLE(RESOURCE_LOAD_STATISTICS)
     if (auto* resourceLoadStatistics = m_networkSession->resourceLoadStatistics())
         resourceLoadStatistics->insertPrivateClickMeasurement(WTFMove(attribution), PrivateClickMeasurementAttributionType::Unattributed);
+#endif
 }
 
 void PrivateClickMeasurementManager::handleAttribution(AttributionTriggerData&& attributionTriggerData, const URL& requestURL, const WebCore::ResourceRequest& redirectRequest)
@@ -112,6 +114,7 @@ void PrivateClickMeasurementManager::startTimer(Seconds seconds)
 
 void PrivateClickMeasurementManager::attribute(const SourceSite& sourceSite, const AttributeOnSite& attributeOnSite, AttributionTriggerData&& attributionTriggerData)
 {
+#if ENABLE(RESOURCE_LOAD_STATISTICS)
     if (auto* resourceLoadStatistics = m_networkSession->resourceLoadStatistics()) {
         resourceLoadStatistics->attributePrivateClickMeasurement(sourceSite, attributeOnSite, WTFMove(attributionTriggerData), [this] (auto optionalSecondsUntilSend) {
             if (optionalSecondsUntilSend) {
@@ -128,6 +131,7 @@ void PrivateClickMeasurementManager::attribute(const SourceSite& sourceSite, con
             }
         });
     }
+#endif
 }
 
 void PrivateClickMeasurementManager::fireConversionRequest(const PrivateClickMeasurement& attribution)
@@ -183,18 +187,23 @@ void PrivateClickMeasurementManager::fireConversionRequest(const PrivateClickMea
 
 void PrivateClickMeasurementManager::clearSentAttributions(Vector<PrivateClickMeasurement>&& sentConversions)
 {
+#if ENABLE(RESOURCE_LOAD_STATISTICS)
     if (auto* resourceLoadStatistics = m_networkSession->resourceLoadStatistics())
         resourceLoadStatistics->clearSentAttributions(WTFMove(sentConversions));
+#endif
 }
 
 void PrivateClickMeasurementManager::updateTimerLastFired()
 {
+#if ENABLE(RESOURCE_LOAD_STATISTICS)
     if (auto* resourceLoadStatistics = m_networkSession->resourceLoadStatistics())
         resourceLoadStatistics->updateTimerLastFired();
+#endif
 }
 
 void PrivateClickMeasurementManager::firePendingAttributionRequests()
 {
+#if ENABLE(RESOURCE_LOAD_STATISTICS)
     auto* resourceLoadStatistics = m_networkSession->resourceLoadStatistics();
     if (!resourceLoadStatistics)
         return;
@@ -227,32 +236,41 @@ void PrivateClickMeasurementManager::firePendingAttributionRequests()
         if (nextTimeToFire < Seconds::infinity())
             startTimer(nextTimeToFire);
     });
+#endif
 }
 
 void PrivateClickMeasurementManager::clear()
 {
     m_firePendingAttributionRequestsTimer.stop();
 
+#if ENABLE(RESOURCE_LOAD_STATISTICS)
     if (auto* resourceLoadStatistics = m_networkSession->resourceLoadStatistics())
         resourceLoadStatistics->clearPrivateClickMeasurement();
+#endif
 }
 
 void PrivateClickMeasurementManager::clearForRegistrableDomain(const RegistrableDomain& domain)
 {
+#if ENABLE(RESOURCE_LOAD_STATISTICS)
     if (auto* resourceLoadStatistics = m_networkSession->resourceLoadStatistics())
         resourceLoadStatistics->clearPrivateClickMeasurementForRegistrableDomain(domain);
+#endif
 }
 
 void PrivateClickMeasurementManager::clearExpired()
 {
+#if ENABLE(RESOURCE_LOAD_STATISTICS)
     if (auto* resourceLoadStatistics = m_networkSession->resourceLoadStatistics())
         resourceLoadStatistics->clearExpiredPrivateClickMeasurement();
+#endif
 }
 
 void PrivateClickMeasurementManager::toString(CompletionHandler<void(String)>&& completionHandler) const
 {
+#if ENABLE(RESOURCE_LOAD_STATISTICS)
     if (auto* resourceLoadStatistics = m_networkSession->resourceLoadStatistics())
         resourceLoadStatistics->privateClickMeasurementToString(WTFMove(completionHandler));
+#endif
 }
 
 void PrivateClickMeasurementManager::setConversionURLForTesting(URL&& testURL)
@@ -265,8 +283,10 @@ void PrivateClickMeasurementManager::setConversionURLForTesting(URL&& testURL)
 
 void PrivateClickMeasurementManager::markAllUnattributedAsExpiredForTesting()
 {
+#if ENABLE(RESOURCE_LOAD_STATISTICS)
     if (auto* resourceLoadStatistics = m_networkSession->resourceLoadStatistics())
         resourceLoadStatistics->markAllUnattributedPrivateClickMeasurementAsExpiredForTesting();
+#endif
 }
 
 bool PrivateClickMeasurementManager::debugModeEnabled() const
@@ -276,10 +296,12 @@ bool PrivateClickMeasurementManager::debugModeEnabled() const
 
 void PrivateClickMeasurementManager::markAttributedPrivateClickMeasurementsAsExpiredForTesting(CompletionHandler<void()>&& completionHandler)
 {
+#if ENABLE(RESOURCE_LOAD_STATISTICS)
     if (auto* resourceLoadStatistics = m_networkSession->resourceLoadStatistics()) {
         resourceLoadStatistics->markAttributedPrivateClickMeasurementsAsExpiredForTesting(WTFMove(completionHandler));
         return;
     }
+#endif
     completionHandler();
 }
 
